# slurm-charms

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  justfile  pyproject.toml  repository.py  test-requirements.txt  tox.ini
.github/workflows/: backport.yaml  ci.yaml  nightly-TICS.yaml  release.yaml  release.yml
charms/sackd/: charmcraft.yaml  pyproject.toml
charms/sackd/src/: charm.py  constants.py  state.py
charms/sackd/terraform/: versions.tf
charms/sackd/tests/unit/: conftest.py  test_charm.py
charms/slurmctld/: charmcraft.yaml  pyproject.toml  requirements.txt
charms/slurmctld/src/: charm.py  config.py  constants.py  custom_exceptions.py  exceptions.py  high_availability.py  integrations.py  interface_influxdb.py  interface_sackd.py  interface_slurmctld_peer.py  interface_slurmd.py  interface_slurmdbd.py  interface_slurmrestd.py  slurmctld_ops.py  state.py  utils.py
charms/slurmctld/src/cos/grafana_dashboards/: slurm.json
charms/slurmctld/terraform/: README.md  outputs.tf  variables.tf
charms/slurmctld/tests/unit/: conftest.py  test_charm.py
charms/slurmd/: charmcraft.yaml  pyproject.toml  requirements.txt
charms/slurmd/src/: charm.py  config.py  constants.py  gpu.py  interface_slurmctld.py  nhc.py  rdma.py  slurmd_ops.py  state.py
charms/slurmd/src/utils/: gpu.py  machine.py  nhc.py  rdma.py  service.py  slurmd.py
charms/slurmd/terraform/: outputs.tf  variables.tf
charms/slurmd/tests/unit/: conftest.py  test_charm.py
charms/slurmdbd/: README.md  charmcraft.yaml  pyproject.toml
charms/slurmdbd/src/: charm.py  config.py  constants.py  exceptions.py  interface_slurmctld.py  state.py  utils.py
charms/slurmdbd/terraform/: README.md  outputs.tf  variables.tf
charms/slurmdbd/tests/unit/: conftest.py  test_charm.py  test_utils.py
charms/slurmrestd/: charmcraft.yaml  pyproject.toml  requirements.txt
charms/slurmrestd/src/: charm.py  constants.py  interface_slurmctld.py  state.py
charms/slurmrestd/terraform/: variables.tf
charms/slurmrestd/tests/unit/: conftest.py  test_charm.py
pkgs/slurm-ops/: pyproject.toml
pkgs/slurm-ops/src/slurm_ops/: __init__.py  sackd.py  scontrol.py  slurmctld.py  slurmd.py  slurmdbd.py  slurmrestd.py
pkgs/slurm-ops/src/slurm_ops/core/: __init__.py  base.py  config.py  config.pyi  constants.py  errors.py  options.py
pkgs/slurm-ops/tests/unit/: conftest.py  constants.py  test_base.py  test_config.py  test_managers.py  test_scontrol.py
slurm-user-build/: myconf  package.py  setup.sh  slurm-charm-bundle.yaml  slurm-user-build-lxd-profile.yaml  slurm.patch  slurm.py  spack.yaml
tests/integration/: conftest.py  constants.py  test_charm.py  test_ha.py  test_influxdb.py  test_oci_runtime.py
tests/integration/assets/: sbatch_sleep_job.sh
tests/integration/testdata/: sbatch_sleep_job.sh
