[project]
name = "slurmctld"
version = "0.0"
requires-python = "==3.12.*"
dependencies = ["ops", "slurmutils", "influxdb", "netifaces-plus"]

[tool.repository]
libraries = [
  "hpc-libs.slurm_ops",
  "hpc-libs.is_container",
  "operator-libs-linux.apt",
  "operator-libs-linux.systemd",
  "grafana-agent.cos_agent",
]
