[project]
name = "slurmd"
version = "0.0"
requires-python = "==3.12.*"
dependencies = [
    "ops",
    "slurmutils",
    "nvidia-ml-py",
    "ubuntu-drivers-common",
    "hpc-libs",
    "cosl",
    "slurm-ops",
]

[tool.repository]
libraries = [
    "operator-libs-linux.apt",
    "operator-libs-linux.systemd",
    "grafana-agent.cos_agent",
]
